--- a/AutoClick/Pages/Shared/_Layout.cshtml
+++ b/AutoClick/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <title>@ViewData["Title"] - AutoClick.cr</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="~/images/logos/LOGOS AUTOCLICK/LOGOS AUTOCLICK-06.png" />
+    <link rel="icon" type="image/jpeg" href="~/images/logos/LOGOS AUTOCLICK/Favicon.jpeg" />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
