--- a/AutoClick/Pages/ResetPassword.cshtml
+++ b/AutoClick/Pages/ResetPassword.cshtml
@@ -257,7 +257,7 @@
             Swal.fire({
                 icon: 'success',
                 title: '¡Contraseña restablecida!',
-                text: '@Model.SuccessMessage',
+                text: 'Tu contraseña ha sido restablecida exitosamente. Ya puedes iniciar sesión con tu nueva contraseña.',
                 confirmButtonColor: '#FF931E',
                 confirmButtonText: 'Ir a inicio de sesión'
             }).then(() => {
